Fix Heading Alignment

--- a/web/app/themes/justicejobs/src/scss/components/_tables.scss
+++ b/web/app/themes/justicejobs/src/scss/components/_tables.scss
@@ -19,7 +19,7 @@ table {
       // padding-right: 25px;
       border-bottom: 1px solid rgba(#a0a5b4, 0.36);
       // border-top: 1px solid rgba(#a0a5b4, 0.36);
-      text-align: center;
+      text-align: left;
     }
 
     td {
